--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
          <button id='search-button'>search</button>
          </h2>
       </div>
-      <div class='result-block'>
-         <div class='result-count'>
-            <span id='result-count__number'></span>
-
+      <div class='result-block' id='result-block'>
+         <div class='result-container' id='result-container'>
+            <div class='result-count' id='result-count'>
+            </div>
+            <div id='result-items'></div>
          </div>
-         <div id='result-items'></div>
       </div>
    </div>
    <script src="code.js"></script>
