--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
          <h1 class="search-block__title">
             <img src="https://code.s3.yandex.net/web-code/entrance-test/github-logo.svg" alt=""> GitHub поиск
          </h1>
-         <input type="text" class='search-block__input' id="search-block__input" placeholder='Github search'>
-         <button id='search-button'>search</button>
+         <div class='search-wrapper'>
+            <input type="text" class='search-block__input' id="search-block__input" placeholder='Github search'>
+            <button class='search-button' id='search-button'>search</button>
+         </div>
          </h2>
       </div>
       <div class='result-block' id='result-block'>
