--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <div class='result-container' id='result-container'>
             <div class='result-count' id='result-count'>
             </div>
-            <div id='result-items'></div>
+            <div class='result-items'></div>
          </div>
       </div>
    </div>
