--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <img src="https://code.s3.yandex.net/web-code/entrance-test/github-logo.svg" alt=""> GitHub поиск
          </h1>
          <div class='search-wrapper'>
-            <input type="text" class='search-block__input' id="search-block__input" placeholder='Github search'>
-            <button class='search-button' id='search-button'>search</button>
+            <input type="text" class='search-block__input' placeholder='Github search'>
+            <button class='search-button'>search</button>
          </div>
          </h2>
       </div>
-      <div class='result-block' id='result-block'>
-         <div class='result-container' id='result-container'>
-            <div class='result-count' id='result-count'>
+      <div class='result-block'>
+         <div class='result-container'>
+            <div class='result-count'>
             </div>
             <div class='result-items'></div>
          </div>
